Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-48816

QSslSocket ignores written data if a CA root is fetched

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.6.2, 5.6, 5.7.1, 5.7
    • 5.5.0
    • Network: SSL
    • None
    • Windows 8.1.
    • 5f3a262a7377c33383594d4ab52e66b987316d70

      If a QSslSocket has to fetch a root certificate during the SSL handshake then any data already written to that socket is not flushed afterwards. This especially affects encrypted QWebSockets.

        1. echoclient.cpp
          3 kB
          Martin Porcelli
        2. echoclient.h
          2 kB
          Martin Porcelli
        3. echoclient.pro
          0.2 kB
          Martin Porcelli
        4. main.cpp
          3 kB
          Martin Porcelli
        5. QTBUG-48816.tar.bzip2
          2 kB
          Edward Welbourne
        6. qsslsocket_openssl.cpp.diff
          0.4 kB
          Martin Porcelli
        7. demo.txt
          0.7 kB
          Edward Welbourne
        8. QTBUG-48816.tar.gz
          2 kB
          Timur Pocheptsov
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            Eddy Edward Welbourne
            porcelli Martin Porcelli
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes