src/network/ssl/qsslsocket_openssl.cpp
@@ -1368,8 +1368,12 @@ void QSslSocketBackendPrivate::_q_caRootLoaded(QSslCertificate cert, QSslCertifi
     if (plainSocket)
         plainSocket->resume();
     paused = false;
-    if (checkSslErrors() && ssl)
+    if (checkSslErrors() && ssl) {
+        bool willClose = (autoStartHandshake && pendingClose);
         continueHandshake();
+        if (!willClose)
+            transmit();
+    }
 }
 
 class QWindowsCaRootFetcherThread : public QThread
